# OboePassthrough

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/oboepassthrough/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/oboepassthrough/: AudioProcessingService.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/oboepassthrough/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
